--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ body{
     #form{height: 75%;
     width:85%;
     top: 6%;
+    height:717px;
+    }
+    #login{
+        height:717px;
     }
     .gradient{
       left: -21vw;
