--- a/style.css
+++ b/style.css
@@ -120,10 +120,12 @@ body{
   cursor: pointer;
 }
 @media only screen and (max-width: 600px) {
-    #form{height: 75%;
+    #form{height: 717px;
     width:85%;
     top: 6%;
     }
+    body{
+        overflow-y:scroll;}
     .gradient{
       left: -21vw;
       top: 55vh;
@@ -141,7 +143,7 @@ body{
   }
   #login{
     
-    height: 85%;
+    height: 717px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
