--- a/style.css
+++ b/style.css
@@ -1,331 +1,351 @@
 
 *{
-    font-family: 'Raleway', sans-serif;
-    padding:0;
-    margin:0;
-    position: relative;
+  font-family: 'Raleway', sans-serif;
+  padding:0;
+  margin:0;
+  position: relative;
+}
+#infoattan ::-webkit-scrollbar-track{
+  background: transparent;
 }
 body{
-    background-color: #fef2f4;
-    overflow: hidden;
+  background-color: #fef2f4;
+  overflow: hidden;
 }
 #form{
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 320px;
-    margin: 10vh auto;
-    border-radius: 25px;
-    background: linear-gradient(90deg, rgb(223 223 223) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
-    box-shadow: inset -2px -11px 20px 4px #ffffff85;
-    overflow: hidden;
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 320px;
+  margin: 10vh auto;
+  border-radius: 25px;
+  background: linear-gradient(90deg, rgb(223 223 223) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
+  box-shadow: inset -2px -11px 20px 4px #ffffff85;
+  overflow: hidden;
 
 }
 #form label{
-    color: whitesmoke;
-    font-size: 14px;
+  color: whitesmoke;
+  font-size: 14px;
 }
 #form time,#login time {
-    font-size: smaller;
-    padding: 20px;
-    font-family: system-ui;
-    color : #5e5e5e;
+  font-size: smaller;
+  padding: 20px;
+  font-family: system-ui;
+  color : #5e5e5e;
 }
 .gradient{
-    position: absolute;
-    width: 101vh;
-    left: 22vw;
-    top: 47vh;
+  position: absolute;
+  width: 101vh;
+  left: 22vw;
+  top: 47vh;
 }
 
 #form form{
-  display: flex;
-    background: #e7153e;
-    flex-direction: row;
-    width: 50%;
-    height: 50%;
-    padding: 0% 10%;
-    padding-top: 19%;
-    border-top-left-radius: 125px;
-    border-top-right-radius: 15px;
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    padding-bottom: 10%;
-    border-bottom-left-radius: 1vw;
-    margin-bottom: 35px;
+display: flex;
+  background: #e7153e;
+  flex-direction: row;
+  width: 80%;
+  height: 50%;
+  padding: 0% 10%;
+  padding-top: 19%;
+  border-top-left-radius: 125px;
+  border-top-right-radius: 15px;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  padding-bottom: 10%;
+  border-bottom-left-radius: 1vw;
+  margin-bottom: 35px;
 }
 #timeUpdate,#workInHand{
-  display: flex;
-    background: #e7153e;
-    flex-direction: row;
-    width: 85%;
-    height: 50%;
-    padding: 0% 10%;
-    padding-top: 19%;
-    border-top-left-radius: 125px;
-    border-top-right-radius: 15px;
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    padding-bottom: 10%;
-    border-bottom-left-radius: 1vw;
+display: flex;
+  background: #e7153e;
+  flex-direction: row;
+  width: 80%;
+  height: 50%;
+  padding: 0% 10%;
+  padding-top: 19%;
+  border-top-left-radius: 125px;
+  border-top-right-radius: 15px;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  padding-bottom: 10%;
+  border-bottom-left-radius: 1vw;
 }
 #contactdiv{
-  display: flex;
+display: flex;
+  background: #e7153e;
+  flex-direction: row;
+  width: 80%;
+  height: 50%;
+  padding: 0% 10%;
+  padding-top: 19%;
+  border-top-left-radius: 125px;
+  border-top-right-radius: 15px;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  padding-bottom: 10%;
+  border-bottom-left-radius: 1vw;
+ 
+}
+#form text{
+  width: 80%;
+  margin: 0 auto;
+}
+#form textarea {
+resize: none;
+position: relative;
+display: block;
+height: 5vw;
+width: 70vw;
+padding: 5px;
+border: 1px solid #bfbfbf08;
+border-radius: 10px;
+background: linear-gradient(90deg, rgb(223 223 223) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
+box-shadow: inset -2px -11px 20px 4px #ffffff85;
+}
+#form textarea:focus {
+  outline: none;
+}
+#form input,#info input{
+  height: 35px;
+  width: 98%;
+  margin: 20px 0;
+  margin-bottom: 0;
+  border: 1px solid #dddbdb;
+  background: #e5e3e3;
+  border-radius: 10px;
+  color: #e7153e;
+  font-weight: bolder;
+  padding: 10px;
+  background: linear-gradient(90deg, rgb(197 197 197) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
+}
+#head{    display: block;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: large;
+  font-weight: 800;
+  color: #7d5960;}
+  #passgiven,#pass{
+    display:none;
+    margin-top: 45%;
+  }
+  #pass{
+  position: absolute;
+  bottom: 130px;
+  width: 55%;
+  height: 30px;
+  left: 78px;
+  border-radius: 5px;
+  border: 0;
+  box-shadow: 0px 0px 50px #b9b9b9;
+  }
+#face{
+width: 120px;
+border-top-left-radius: 40px;
+border-top-right-radius: 40px;
+border-bottom-left-radius: 40px;
+border-bottom-right-radius: 40px;
+margin: 2vw auto;
+z-index: 1;
+margin-bottom: -3vw;
+}
+#settings{
+top: 24px;
+position: absolute;
+width: 18px;
+right: 10px;
+opacity: 0.7;
+cursor: pointer;
+}
+@media only screen and (max-width: 600px) {
+  #form{
+  height: 86%;
+  width: 85%;
+  top: 6%;
+  margin-top: 5px;
+  }
+  #form textarea{
+    height:18vw;
+  }
+  body{
+    overflow-y: scroll;
+  }
+  .gradient{
+    left: -21vw;
+    top: 35vh;
+    overflow: hidden;
+    width: 117vw;
+    overflow-y: scroll;
+  }
+  #form form{
+    overflow-y: scroll;
+      display: flex;
+      background: #e7153e;
+      flex-direction: row;
+      width: 82%;
+      height: 72%;
+      padding: 0% 10%;
+      padding-top: 12%;
+      border-top-left-radius: 125px;
+      border-top-right-radius: 15px;
+      flex-wrap: wrap;
+      padding-bottom: 10%;
+      border-bottom-left-radius: 1vw;
+      margin-bottom: 35px;
+  }
+  #timeUpdate,#workInHand{
+    overflow-y: scroll;
+    display: flex;
     background: #e7153e;
     flex-direction: row;
-    width: 85%;
-    height: 50%;
+    width: 82%;
+    height: 72%;
     padding: 0% 10%;
-    padding-top: 19%;
+    padding-top: 12%;
     border-top-left-radius: 125px;
     border-top-right-radius: 15px;
     flex-wrap: wrap;
-    overflow-y: scroll;
     padding-bottom: 10%;
     border-bottom-left-radius: 1vw;
-   
+    align-content: flex-start;
+    align-items: center;
+  }
+  #contactdiv{
+    overflow-y: scroll;
+    display: flex;
+    background: #e7153e;
+    flex-direction: row;
+    width: 82%;
+    height: 72%;
+    padding: 0% 10%;
+    padding-top: 12%;
+    border-top-left-radius: 125px;
+    border-top-right-radius: 15px;
+    flex-wrap: wrap;
+    padding-bottom: 10%;
+    border-bottom-left-radius: 1vw;
+    align-content: flex-start;
+    align-items: center;
+    
+  }
+  #face{
+    top:7vw;
+  }
 }
-#form text{
-    width: 80%;
-    margin: 0 auto;
-}
-#form textarea {
-  resize: none;
-  position: relative;
-  display: block;
-  height: 5vw;
-  width: 70vw;
-  padding: 5px;
-  border: 1px solid #bfbfbf08;
-  border-radius: 10px;
+#login{
+  
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 320px;
+  margin: 10vh auto;
+  border-radius: 25px;
   background: linear-gradient(90deg, rgb(223 223 223) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
   box-shadow: inset -2px -11px 20px 4px #ffffff85;
+  overflow: hidden;
+  position: relative;
+  
+
 }
-#form textarea:focus {
-    outline: none;
-}
-#form input,#info input{
-    height: 35px;
-    width: 98%;
-    margin: 20px 0;
-    margin-bottom: 0;
-    border: 1px solid #dddbdb;
-    background: #e5e3e3;
-    border-radius: 10px;
-    color: #e7153e;
-    font-weight: bolder;
-    padding: 10px;
-    background: linear-gradient(90deg, rgb(197 197 197) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
-}
-#head{    display: block;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    font-size: large;
-    font-weight: 800;
-    color: #7d5960;}
-    #passgiven,#pass{
-      display:none;
-      margin-top: 45%;
-    }
-    #pass{
-    position: absolute;
-    bottom: 130px;
-    width: 55%;
-    height: 30px;
-    left: 78px;
-    border-radius: 5px;
-    border: 0;
-    box-shadow: 0px 0px 50px #b9b9b9;
-    }
-#face{
-  width: 120px;
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
-  margin: 2vw auto;
-  z-index: 1;
-  margin-bottom: -3vw;
-}
-#settings{
-  top: 24px;
+#info{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: absolute;
-  width: 18px;
-  right: 10px;
-  opacity: 0.7;
+  bottom: -1vh;
+  background: linear-gradient(90deg, rgb(214 214 214) 0%, rgb(225 225 225) 97%, rgb(245 241 241) 100%);
+  padding: 11%;
+  height: 54%;
+  width: 78%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  justify-content: flex-start;
+}
+
+#info input{
+  margin-bottom: 20%;
+  background: #ededed;
+  width: 144%;
+  border-radius: 5px;
+}
+#Submit{
+  margin: 0 auto;
   cursor: pointer;
 }
-@media only screen and (max-width: 600px) {
-    #form{
-    height: 86%;
-    width: 85%;
-    top: 6%;
-    margin-top: 5px;
-    }
-    #form textarea{
-      height:18vw;
-    }
-    body{
-      overflow-y: scroll;
-    }
-    .gradient{
-      left: -21vw;
-      top: 35vh;
-      overflow: hidden;
-      width: 117vw;
-      overflow-y: scroll;
-    }
-    #form form{
-      overflow-y: scroll;
-        display: flex;
-        background: #e7153e;
-        flex-direction: row;
-        width: 82%;
-        height: 72%;
-        padding: 0% 10%;
-        padding-top: 12%;
-        border-top-left-radius: 125px;
-        border-top-right-radius: 15px;
-        flex-wrap: wrap;
-        padding-bottom: 10%;
-        border-bottom-left-radius: 1vw;
-        margin-bottom: 35px;
-    }
-    #timeUpdate,#workInHand{
-      overflow-y: scroll;
-      display: flex;
-      background: #e7153e;
-      flex-direction: row;
-      width: 82%;
-      height: 72%;
-      padding: 0% 10%;
-      padding-top: 12%;
-      border-top-left-radius: 125px;
-      border-top-right-radius: 15px;
-      flex-wrap: wrap;
-      padding-bottom: 10%;
-      border-bottom-left-radius: 1vw;
-      align-content: flex-start;
-      align-items: center;
-    }
-    #contactdiv{
-      overflow-y: scroll;
-      display: flex;
-      background: #e7153e;
-      flex-direction: row;
-      width: 82%;
-      height: 72%;
-      padding: 0% 10%;
-      padding-top: 12%;
-      border-top-left-radius: 125px;
-      border-top-right-radius: 15px;
-      flex-wrap: wrap;
-      padding-bottom: 10%;
-      border-bottom-left-radius: 1vw;
-      align-content: flex-start;
-      align-items: center;
-      
-    }
-    #face{
-      top:7vw;
-    }
-  }
-  #login{
-    
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 320px;
-    margin: 10vh auto;
-    border-radius: 25px;
-    background: linear-gradient(90deg, rgb(223 223 223) 0%, rgb(255 244 244) 97%, rgb(229 229 229) 100%);
-    box-shadow: inset -2px -11px 20px 4px #ffffff85;
-    overflow: hidden;
-    position: relative;
-    
+#info span{
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  color: whitesmoke;
+}
+#info label{
+  font-size: 15px;
+  top: 12px;
+  color: #787878;
+  font-weight:bold ;
+}
+#info input:focus{
+  outline: none;
+}
+#menu{
+  display: flex;
+  width: 78%;
+  margin: 5% 4.5%;
+  border-radius: 40px;
+  background-color: #ebebeb;
+  bottom: 0;
+  position: absolute;
+  z-index: 2;
+  margin-bottom: 0%;
+  justify-content: space-around;
+  border: 0;
+  align-items: center;
+  padding: 5px 20px;
+}
+#menu img:hover{
+   scale: 1.05;
+   filter: drop-shadow(1px 1px 1px #aaa);
+   background-color: #27d5d5;
+}
 
-  }
-  #info{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: absolute;
-    bottom: -1vh;
-    background: linear-gradient(90deg, rgb(214 214 214) 0%, rgb(225 225 225) 97%, rgb(245 241 241) 100%);
-    padding: 11%;
-    height: 54%;
-    width: 78%;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    justify-content: flex-start;
-  }
+#logTimeSubmit{
+  width: 80%;
+  margin: 10% 10%;
+  height: 35px;
+  border-radius: 10px;
+  border: 0;
+}
+::-webkit-scrollbar {
+  width: 5px;
+  height:5px;
+}
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+#table tbody tr td:last-child {
+  border: 1px solid lightcoral;
+  font-size: 14px;
+  padding: 10px;
+  text-align: initial;
+}
+#table tbody tr td:first-child {
+  border: 1px solid lightcoral;
+  text-align: center;
+}
 
-  #info input{
-    margin-bottom: 20%;
-    background: #ededed;
-    width: 144%;
-    border-radius: 5px;
-  }
-  #Submit{
-    margin: 0 auto;
-    cursor: pointer;
-  }
-  #info span{
-    display: flex;
-    flex-direction: column;
-    font-size: 12px;
-    color: whitesmoke;
-  }
-  #info label{
-    font-size: 15px;
-    top: 12px;
-    color: #787878;
-    font-weight:bold ;
-  }
-  #info input:focus{
-    outline: none;
-  }
-  #menu{
-    display: flex;
-    width: 78%;
-    margin: 5% 4.5%;
-    border-radius: 40px;
-    background-color: #ebebeb;
-    bottom: 0;
-    position: absolute;
-    z-index: 2;
-    margin-bottom: 0%;
-    justify-content: space-around;
-    border: 0;
-    align-items: center;
-    padding: 5px 20px;
-  }
-  #menu img:hover{
-     scale: 1.05;
-     filter: drop-shadow(1px 1px 1px #aaa);
-     background-color: #27d5d5;
-  }
-
-  #logTimeSubmit{
-    width: 80%;
-    margin: 10% 10%;
-    height: 35px;
-    border-radius: 10px;
-    border: 0;
-  }
-  ::-webkit-scrollbar {
-    width: 5px;
-    height:5px;
-  }
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+#table tbody tr th{
+    width: 40%;
+    text-align: center;
+    font-size: 16px;
+    padding: 10px;
+   }
